# mods

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  test.sh
.github/: copilot-instructions.md
scripts/: test_endpoints.sh
src/: camera.rs  config.rs  http.rs  logging.rs  main.rs  message.rs  ws_client.rs  ws_server.rs
types/: Cargo.toml
types/src/: lib.rs
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/src/: About.tsx  App.tsx  Overview.css  Overview.tsx  index.css
ui/src/lib/: utils.ts
ui/src/types/: BuildInfo.ts
ui/tests/: event-router.spec.ts
