[package]
name = "mods"
version = "0.1.0"
edition = "2024"

[build-dependencies]
types = { path = "./types" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
chrono = "0.4.41"

[dependencies]
types = { path = "./types" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "signal"] }
tokio-tungstenite = "0.22"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["json", "http1", "tokio"] }
hyper = { version = "1.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi", "local-time", "chrono"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.4" }
tower-http = { version = "0.3", features = ["cors"] }
chrono = "0.4.41"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
# opt-level = "s"  # Smaller in some cases...
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
unwrap_used = "deny"
# restriction = { level = "warn", allow = ["clone_on_copy", "module_inception", "needless_borrow"] }
# correctness = { level = "warn", allow = ["unnecessary_unwrap"] }
# enum_glob_use = "deny"
# expect_used = "deny"